# Optical-Simulation-Lab

./: .gitignore  .gitmodules  CMakeLists.txt  Doxyfile  README.md  elements_list
include/: aperture.hpp  camera.hpp  lens.hpp  mirror.hpp  optical_element.hpp  ray.hpp  scene.hpp  simulation_engine.hpp  source.hpp  texture_manager.hpp  utils.hpp  vec3.hpp  wavefront.hpp
src/: aperture.cpp  camera.cpp  lens.cpp  main.cpp  mirror.cpp  optical_element.cpp  ray.cpp  simulation_engine.cpp  utils.cpp  vec3.cpp  wavefront.cpp
